Revision history for perl distribution Convos

4.37 Not Released
 - Add suppport for custom bot password
 - Fix bot Hailo action will not store "nick: ..." prefix
 - Change bot to wait one second before replying
 - Change default Hailo engine class to Hailo::Engine::Scored

4.36 2020-09-01T11:12:00+0900
 - Fix clearing dialog messages when loading overlapping messages
 - Fix not loading messages when a dialog already has messages
 - Fix not having #undefined in location when scrolling to "date change" marker
 - Fix not skipping a month when fething messages at end of month

4.35 2020-08-28T12:27:00+0900
 - Fix not following link when clicking on a thumbnail
 - Fix not focusing "search" input on load/routerender
 - Fix searching for messages
 - Changed styling for message that has focus

4.34 2020-08-28T11:35:00+0900
 - Add support for "around" which will load messages faster
 - Improved "keep scroll position" logic with <InfinityScroll/> component
 - Improved WebSocket error messages
 - Fix loading relevant messages when clicking on a notification or search result #511
 - Fix focus logic on Shift+Enter and Esc
 - Fix max-width for YouTube iframe on small screens
 - Fix reloading Notifications
 - Fix drag&drop effect when uploading files
 - Fix reporting installed versions after "convos install" has run the first time
 - Changed default websocket error message
 - Removed loading of external Instagram JavaScript library
 - Removed loading of external Twitter JavaScript library

4.33 2020-08-08T17:32:00+0900
 - Prevent frontend from sending the whole dialog object, which results in
   WebSocket close clode "1009"

4.32 2020-08-06T19:09:00+0900
 - Fix loading login page for new users

4.31 2020-08-06T12:59:00+0900
 - Add backoff reconnect logic to the WebSocket
 - Fix issue where the WebSocket would not reconnect after being disconnected
 - Fix reloading user object on reconnect
 - Fix showing error messages in current dialog